# WhatsappAgent

./: README.md  pyproject.toml  test_gemini_agent.py
app/domain/: message_service.py
app/domain/agents/: gemini_agent.py  pydantic_ai_agent.py  task.py
app/domain/tools/: base.py
app/infrastructure/: llm.py
tests/agents/: test_gemini_agent_unit.py
tests/domain/: test_message_service.py
